[package]
name = "seos-v8.5"
version = "8.5.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tch = "0.15"
candle-core = "0.4"
candle-nn = "0.4"
playwright = { git = "https://github.com/octaltree/playwright-rust" }
tauri = { version = "2.0", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"